[package]
name = "pixelscript"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored", "send"], optional = true }
anyhow = "1.0.100"
# rustpython-vm = { version = "0.4.0", default-features = false, features = ["compiler", "codegen", "freeze-stdlib"], optional = true }
# rustpython-compiler = {version = "0.4.0", optional = true}
parking_lot = "0.12.5"
thread_local = "1.1.9"

[build-dependencies]
cbindgen = "0.29.2"
cc = "1.2.52"
bindgen = "0.72.1"

[features]
# Default includes all languages.
default = ["lua", "python", "php"]
# Include LUA scripting.
lua = ["dep:mlua"]
# Include Python scripting. Via pocketpy
python = []
# Include PHP scripting. v5.3 Via PH7
php = []
# Include Python scripting. via rustpython
# rustpython = ["dep:rustpython-vm", "dep:rustpython-compiler"]

# Include core libs like pxs-json, pxs-io, pxs-os
include-core = []

# Compile pixel script to debug in a "release" enviroment
pxs-debug = []

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"