[package]
name = "pixelscript"
version = "0.5.10"
edition = "2024"
license = "Apache-2.0"
authors = ["Jordan Castro jordan@grupojvm.com"]
description = "Multi language scripting runtime"
repository = "https://github.com/jordan-castro/pixelscript"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored", "send"], optional = true }
anyhow = "1.0.100"
parking_lot = "0.12.5"
thread_local = "1.1.9"

[build-dependencies]
cbindgen = "0.29.2"
cc = "1.2.52"
bindgen = "0.72.1"

[features]
# Default includes all languages and cores.
default = ["lua", "python", "js", "include-core"]
# Include LUA scripting.
lua = ["dep:mlua"]
# Include Python scripting. Via pocketpy
python = []
# Include PHP scripting. v5.3 Via PH7
php = []
# luajit uses the same lua engine but with JIT flags
luajit = ["lua"]
js = []

# Core libs
# Include all core libs
include-core = [
    "pxs_json"
]
pxs_json = []

# Compile pixel script to debug in a "release" enviroment
pxs-debug = []

testing = []

[profile.release]
opt-level = "z"
strip = true
lto = "fat"
codegen-units = 1
panic = "unwind"
debug = false
incremental = false
